Configure gulp, rename theme with all internal files, create by programmaticaly block with social icons for header

--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -1,10 +1,12 @@
-name: Drupalbook
-type: theme
+name: Fitpreg
+description: Custom theme for fitpregnancy site
 base theme: classy
-description: My first Drupal 8 theme.
 core: 8.x
+type: theme
+
 libraries:
-  - drupalbook/global-styling
+  - fitpreg/global-styling
+
 regions:
   header: Header
   content: Content  
