--- a/config/default/sync/core.entity_view_display.node.news.default.yml
+++ b/config/default/sync/core.entity_view_display.node.news.default.yml
@@ -3,12 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_display.comment.comment.default
     - field.field.node.news.body
     - field.field.node.news.field_category
+    - field.field.node.news.field_comment
     - field.field.node.news.field_images
+    - field.field.node.news.field_node_in_sli
+    - field.field.node.news.field_show_in_main_page
     - field.field.node.news.field_video
     - node.type.news
   module:
+    - comment
     - image
     - text
     - user
@@ -25,6 +30,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_comment:
+    weight: 4
+    label: above
+    settings:
+      view_mode: default
+      pager_id: 0
+    third_party_settings: {  }
+    type: comment_default
+    region: content
   field_images:
     weight: 0
     label: hidden
@@ -34,9 +48,19 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_show_in_main_page:
+    weight: 5
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_video:
-    weight: 3
-    label: hidden
+    weight: 6
+    label: above
     settings:
       width: '854'
       height: '480'
@@ -51,3 +75,4 @@ content:
     third_party_settings: {  }
 hidden:
   field_category: true
+  field_node_in_sli: true
