--- a/config/default/sync/views.view.slideshow.yml
+++ b/config/default/sync/views.view.slideshow.yml
@@ -167,7 +167,7 @@ display:
           group_column: ''
           group_columns: {  }
           group_rows: true
-          delta_limit: 5
+          delta_limit: 1
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
@@ -227,22 +227,58 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_node_in_sli_value:
+          id: field_node_in_sli_value
+          table: node__field_node_in_sli
+          field: field_node_in_sli_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
       sorts:
         created:
           id: created
           table: node_field_data
           field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
           granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
       title: Slideshow
       header: {  }
       footer: {  }
@@ -289,6 +325,24 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+      defaults:
+        sorts: false
     cache_metadata:
       max-age: -1
       contexts:
