add core/rupal in libraries

--- a/themes/custom/fitpreg/fitpreg.libraries.yml
+++ b/themes/custom/fitpreg/fitpreg.libraries.yml
@@ -11,4 +11,6 @@ global-styling:
     js/slick.min.js: {}
   dependencies:
     - core/jquery
+    - core/jquery.once
+    - core/drupal
   template: template.html.twig
