--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ vendor
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
 sites/*/services*.yml
+sites/development.services.yml
+
 
 # Ignore paths that contain user-generated content.
 sites/*/files
