Connect local slick library, because dev-server hasn't access to other sites.

--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -6,8 +6,8 @@ type: theme
 
 libraries:
   - fitpreg/global-styling
-  - fitpreg/slick
   - fitpreg/fonts
+  - fitpreg/slick-slider
 
 regions:
   header: Header
