Connect animateCSS to *.libraries.yml.

--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -8,6 +8,7 @@ libraries:
   - fitpreg/global-styling
   - fitpreg/fonts
   - fitpreg/slick-slider
+  - fitpreg/animateCSS
 
 regions:
   header: Header
