Background, show-hide animation, prevent scrolling. Also, made some z-index changes for normal working animation.

--- a/themes/custom/fitpreg/fitpreg.libraries.yml
+++ b/themes/custom/fitpreg/fitpreg.libraries.yml
@@ -3,13 +3,15 @@ global-styling:
     theme:
       css/fitpreg.style.css: {}
   js:
-    js/common.js: {}
     js/fitpreg.js: {}
     js/slide_start.js: {}
+    js/common.js: {}
   dependencies:
     - core/jquery
     - core/jquery.once
     - core/drupal
+    - core/drupalSettings
+    - core/drupal.ajax
   template: template.html.twig
 
 fonts:
