--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -9,6 +9,7 @@ libraries:
   - fitpreg/fonts
   - fitpreg/slick-slider
   - fitpreg/animateCSS
+  - fitpreg/owl-carousel
 
 regions:
   header: Header
