--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -9,7 +9,8 @@ libraries:
   - fitpreg/fonts
   - fitpreg/slick-slider
   - fitpreg/animateCSS
-  - fitpreg/owl-carousel
+#  - fitpreg/owl-carousel
+  - fitpreg/magnific-popup
 
 regions:
   header: Header
