Add masonry.js library (mosaic). Add basic styles for mosaic views.

--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -10,7 +10,8 @@ libraries:
   - fitpreg/slick-slider
   - fitpreg/animateCSS
 #  - fitpreg/owl-carousel
-  - fitpreg/magnific-popup
+#  - fitpreg/magnific-popup
+  - fitpreg/mosaic
 
 regions:
   header: Header
