--- a/themes/custom/fitpreg/fitpreg.libraries.yml
+++ b/themes/custom/fitpreg/fitpreg.libraries.yml
@@ -47,3 +47,8 @@ magnific-popup:
       https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css: { type: external, minified: true }
   js:
     https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js: { type: external, minified: true }
+
+mosaic:
+  js:
+    https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js: { type: external }
+    js/mosaic-init.js: {}
