Fix week-menu animation.

--- a/themes/custom/fitpreg/fitpreg.libraries.yml
+++ b/themes/custom/fitpreg/fitpreg.libraries.yml
@@ -17,7 +17,7 @@ global-styling:
 fonts:
   css:
     theme:
-      fonts/flaticon/flaticon.css: {}
+      fonts/fi/flaticon.css: {}
 
 slick-slider:
   css:
