--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "~1.4",
         "drush/drush": "^8.1",
-        "drupal/views_infinite_scroll": "^1.5"
+        "drupal/views_infinite_scroll": "^1.5",
+        "drupal/taxonomy_breadcrumb": "^1.0@alpha"
     },
     "replace": {
         "drupal/core": "~8.3"
