--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "wikimedia/composer-merge-plugin": "~1.4",
         "drush/drush": "^8.1",
         "drupal/views_infinite_scroll": "^1.5",
-        "drupal/taxonomy_breadcrumb": "^1.0@alpha"
+        "drupal/taxonomy_breadcrumb": "^1.0@alpha",
+        "drupal/token": "^1.1",
+        "drupal/easy_breadcrumb": "^1.6",
+        "drupal/menu_breadcrumb": "^1.5"
     },
     "replace": {
         "drupal/core": "~8.3"
