--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "drupal/token": "^1.1",
         "drupal/easy_breadcrumb": "^1.6",
         "drupal/menu_breadcrumb": "^1.5",
-        "drupal/pathauto": "^1.0"
+        "drupal/pathauto": "^1.0",
+        "drupal/console": "^1.5"
     },
     "replace": {
         "drupal/core": "~8.3"
