Change permissions for Fitpreg custom module files.

--- a/modules/custom/fitpreg/fitpreg.info.yml
+++ b/modules/custom/fitpreg/fitpreg.info.yml
@@ -1,5 +1,5 @@
-name: 'Fitpreg'
+name: Fitpreg
 type: module
 description: 'Module for making general tasks and alterations.'
 core: 8.x
-package: 'Custom'
+package: Custom
