Rename custom module from Fitpreg to Fitpregnancy.

--- a/modules/custom/fitpregnancy/fitpregnancy.info.yml
+++ b/modules/custom/fitpregnancy/fitpregnancy.info.yml
@@ -1,5 +1,6 @@
-name: Fitpreg
+name: Fitpregnancy
 type: module
+version: 1.0
 description: 'Module for making general tasks and alterations.'
 core: 8.x
 package: Custom
