Add configs for testing

--- a/config/default/sync/block.block.fitpreg_logo.yml
+++ b/config/default/sync/block.block.fitpreg_logo.yml
@@ -1,6 +1,6 @@
 uuid: 06365065-47f5-4479-88d3-1038fdd7de8f
 langcode: en
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:basic:95f97c9a-607c-43f0-a4c4-5f55e5d9c428'
@@ -11,7 +11,7 @@ dependencies:
 id: fitpreg_logo
 theme: fitpreg
 region: header
-weight: -6
+weight: 0
 provider: null
 plugin: 'block_content:95f97c9a-607c-43f0-a4c4-5f55e5d9c428'
 settings:
