--- a/config/default/sync/core.entity_form_display.node.week.default.yml
+++ b/config/default/sync/core.entity_form_display.node.week.default.yml
@@ -6,10 +6,12 @@ dependencies:
     - field.field.node.week.body
     - field.field.node.week.field_img
     - field.field.node.week.field_week
+    - field.field.node.week.field_week_link
     - image.style.thumbnail
     - node.type.week
   module:
     - image
+    - link
     - path
     - text
 id: node.week.default
@@ -45,6 +47,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_week_link:
+    weight: 34
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
     region: content
   path:
     type: path
