--- a/config/default/sync/page_manager.page_variant.main-panels_variant-0.yml
+++ b/config/default/sync/page_manager.page_variant.main-panels_variant-0.yml
@@ -42,6 +42,17 @@ variant_settings:
       weight: -10
       uuid: f8ef1a74-3993-4a6d-b11d-d7b61c58f689
       context_mapping: {  }
+    654d928d-5edb-44e4-8cd2-a9ff6a677cb7:
+      id: 'views_block:pregnancy_health_block-block_2'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: three
+      weight: -9
+      uuid: 654d928d-5edb-44e4-8cd2-a9ff6a677cb7
+      context_mapping: {  }
     3310e9ae-3bbf-46fa-a16d-5edfe91553e9:
       id: 'views_block:ttc_blocks-block_2'
       label: ''
