--- a/config/default/sync/system.site.yml
+++ b/config/default/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 4adb5dfe-7ab0-4d9b-bf8d-6405f533b3b4
-name: fitpregnancy
+name: fitpregnancy.com
 mail: andrey.p@rocksolid.com.ua
 slogan: ''
 page:
