--- a/config/default/sync/core.entity_form_display.node.news.default.yml
+++ b/config/default/sync/core.entity_form_display.node.news.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_comment
     - field.field.node.news.field_images
     - field.field.node.news.field_node_in_sli
+    - field.field.node.news.field_paragraphs
     - field.field.node.news.field_show_in_main_page
     - field.field.node.news.field_video
     - image.style.thumbnail
@@ -15,6 +16,7 @@ dependencies:
   module:
     - comment
     - image
+    - paragraphs
     - text
     - video
 id: node.news.default
@@ -60,6 +62,18 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_paragraphs:
+    type: entity_reference_paragraphs
+    weight: 29
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
     region: content
   field_show_in_main_page:
     weight: 27
