--- a/config/default/sync/core.entity_view_display.node.news.default.yml
+++ b/config/default/sync/core.entity_view_display.node.news.default.yml
@@ -9,11 +9,13 @@ dependencies:
     - field.field.node.news.field_comment
     - field.field.node.news.field_images
     - field.field.node.news.field_node_in_sli
+    - field.field.node.news.field_paragraphs
     - field.field.node.news.field_show_in_main_page
     - field.field.node.news.field_video
     - node.type.news
   module:
     - comment
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -47,6 +49,15 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 7
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_show_in_main_page:
     weight: 5
