--- a/config/default/sync/core.extension.yml
+++ b/config/default/sync/core.extension.yml
@@ -22,10 +22,13 @@ module:
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
+  entity_reference_revisions: 0
   field: 0
+  field_defaults: 0
   field_ui: 0
   file: 0
   filter: 0
+  fitpregnancy: 0
   hal: 0
   help: 0
   history: 0
@@ -34,6 +37,7 @@ module:
   layout_discovery: 0
   link: 0
   main_page: 0
+  menu_breadcrumb: 0
   menu_ui: 0
   node: 0
   options: 0
@@ -46,29 +50,29 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  search_kint: 0
   serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
   user: 0
   video: 0
-  views_slideshow: 0
-  views_slideshow_cycle: 0
+  views_infinite_scroll: 0
   views_ui: 0
-  week_block: 0
   menu_link_content: 1
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   stable: 0
   classy: 0
   bartik: 0
   seven: 0
-  drupalbook: 0
   fitpreg: 0
 profile: standard
 _core:
