--- a/config/default/sync/user.role.anonymous.yml
+++ b/config/default/sync/user.role.anonymous.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access content overview'
   - 'access site-wide contact form'
   - 'search content'
   - 'use text format restricted_html'
