--- a/config/default/sync/user.role.authenticated.yml
+++ b/config/default/sync/user.role.authenticated.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access content overview'
   - 'access shortcuts'
   - 'access site-wide contact form'
   - 'post comments'
