--- a/config/default/sync/views.view.slideshow.yml
+++ b/config/default/sync/views.view.slideshow.yml
@@ -53,8 +53,8 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 5
-          offset: 5
+          items_per_page: 10
+          offset: null
       style:
         type: default
         options:
