--- a/config/default/sync/core.entity_view_display.node.week.default.yml
+++ b/config/default/sync/core.entity_view_display.node.week.default.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.week.body
+    - field.field.node.week.field_category
     - field.field.node.week.field_img
     - field.field.node.week.field_week
+    - field.field.node.week.field_week_link
     - node.type.week
   module:
     - image
+    - link
     - options
     - text
     - user
@@ -23,6 +26,14 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_category:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_img:
     weight: 102
@@ -39,6 +50,18 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_week_link:
+    weight: 104
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
     region: content
   links:
     weight: 100
