--- a/config/default/sync/core.entity_view_display.node.week.default.yml
+++ b/config/default/sync/core.entity_view_display.node.week.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.week.body
     - field.field.node.week.field_category
     - field.field.node.week.field_img
+    - field.field.node.week.field_see_all_weeks
     - field.field.node.week.field_week
     - field.field.node.week.field_week_link
     - node.type.week
@@ -43,6 +44,18 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_see_all_weeks:
+    weight: 106
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
     region: content
   field_week:
     weight: 103
