--- a/config/default/sync/core.entity_form_display.node.week.default.yml
+++ b/config/default/sync/core.entity_form_display.node.week.default.yml
@@ -3,17 +3,20 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.week.body
     - field.field.node.week.field_category
     - field.field.node.week.field_img
     - field.field.node.week.field_see_all_weeks
+    - field.field.node.week.field_tips_and_todos
     - field.field.node.week.field_week
     - field.field.node.week.field_week_link
+    - field.field.node.week.field_your_growing_baby
+    - field.field.node.week.field_your_growing_belly
     - image.style.thumbnail
     - node.type.week
   module:
     - image
     - link
+    - paragraphs
     - path
     - text
 id: node.week.default
@@ -21,15 +24,6 @@ targetEntityType: node
 bundle: week
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
   created:
     type: datetime_timestamp
     weight: 10
@@ -46,7 +40,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_img:
-    weight: 32
+    weight: 40
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -61,6 +55,18 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_tips_and_todos:
+    type: entity_reference_paragraphs
+    weight: 39
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_week:
     weight: 33
     settings: {  }
@@ -74,6 +80,24 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_your_growing_baby:
+    weight: 37
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea_with_summary
+    region: content
+  field_your_growing_belly:
+    weight: 38
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea_with_summary
     region: content
   path:
     type: path
