--- a/config/default/sync/views.view.weeks.yml
+++ b/config/default/sync/views.view.weeks.yml
@@ -1,12 +1,11 @@
-uuid: 104f3d4d-1edb-4ab1-a9cb-3d0018ee59bc
+uuid: 312ecadc-d184-4f40-9728-7cd7b3db1588
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.body
     - field.storage.node.field_img
     - field.storage.node.field_week
-    - image.style.large
+    - field.storage.node.field_your_growing_baby
     - node.type.week
   module:
     - image
@@ -15,9 +14,9 @@ dependencies:
     - text
     - user
 id: weeks
-label: WEEKS
+label: Weeks
 module: views
-description: 'All weeks view here'
+description: ''
 tag: ''
 base_table: node_field_data
 base_field: nid
@@ -66,7 +65,7 @@ display:
           default_field_elements: true
           inline: {  }
           separator: ''
-          hide_empty: false
+          hide_empty: true
       fields:
         field_week:
           id: field_week
@@ -181,12 +180,12 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: large
+            image_style: ''
             image_link: ''
           group_column: ''
           group_columns: {  }
           group_rows: true
-          delta_limit: 1
+          delta_limit: 0
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
@@ -194,10 +193,10 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        body:
-          id: body
-          table: node__body
-          field: body
+        field_your_growing_baby:
+          id: field_your_growing_baby
+          table: node__field_your_growing_baby
+          field: field_your_growing_baby
           relationship: none
           group_type: group
           admin_label: ''
@@ -243,7 +242,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: summary
-          type: text_trimmed
+          type: text_summary_or_trimmed
           settings:
             trim_length: 600
           group_column: value
@@ -268,7 +267,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: 'Read more about being {{ field_week }} week pregnant'
+            text: 'Read more about being {{ field_week }} week pregnant.'
             make_link: false
             path: ''
             absolute: false
@@ -284,8 +283,8 @@ display:
             target: ''
             nl2br: false
             max_length: 0
-            word_boundary: false
-            ellipsis: false
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
@@ -305,7 +304,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          text: ''
+          text: view
           entity_type: node
           plugin_id: entity_link
       filters:
@@ -342,7 +341,7 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: weeks
+      title: Weeks
       header:
         area:
           id: area
@@ -354,8 +353,8 @@ display:
           empty: false
           tokenize: false
           content:
-            value: "<div class='weeks-views-title'>\n<h1>Week-by-Week Pregnancy</h1>\n<p>Here's your one-stop guide to every week of pregnancy. Click on any week for a more detailed description of your pregnancy.</p>\n</div>"
-            format: full_html
+            value: "<div class='week-view-title'> \n<h3>Week-by-Week Pregnancy</h3>\n<p>Here's your one-stop guide to every week of pregnancy. Click on any week for a more detailed description of your pregnancy.</p>\n</div>"
+            format: basic_html
           plugin_id: text
       footer: {  }
       empty: {  }
@@ -370,9 +369,9 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_img'
         - 'config:field.storage.node.field_week'
+        - 'config:field.storage.node.field_your_growing_baby'
   page_1:
     display_plugin: page
     id: page_1
@@ -389,6 +388,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
-        - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_img'
         - 'config:field.storage.node.field_week'
+        - 'config:field.storage.node.field_your_growing_baby'
