Add new region: Right Sidebar.

--- a/themes/custom/fitpreg/fitpreg.info.yml
+++ b/themes/custom/fitpreg/fitpreg.info.yml
@@ -15,5 +15,6 @@ libraries:
 
 regions:
   header: Header
-  content: Content  
+  content: Content 
+  sidebar_first: 'Right Sidebar'   
   footer: Footer
