--- a/config/default/sync/user.role.authenticated.yml
+++ b/config/default/sync/user.role.authenticated.yml
@@ -14,6 +14,7 @@ permissions:
   - 'access content overview'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access to pager for content type'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
